--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.61
-loader_version=0.12.0
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.6
+loader_version=0.12.12
 #Fabric API
-fabric_version = 0.40.1+1.17
+fabric_version=0.44.0+1.18
 # Mod Properties
-mod_version=1.1
+mod_version=1.18.1-1.2
 maven_group=fr.minemobs
 archives_base_name=hideplayers
 
